--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ Sphinx = "==1.8.2"
 factory_boy = "==2.11.1"
 django_coverage_plugin = "==1.6.0"
 django-taggit = "*"
+djangorestframework-jwt = "*"
 
 [requires]
 python_version = "3.7"
