--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,8 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
+    "reactotron-react-js": "^2.1.4",
+    "reactotron-redux": "^2.1.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-i18n": "^1.5.14",
