--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "redux-devtools-extension": "^2.13.7",
     "redux-i18n": "^1.5.14",
     "redux-thunk": "^2.3.0",
+    "reset-css": "^4.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
