--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js"
   },
   "eslintConfig": {
     "extends": "react-app"
