--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
-    "react-ionicons": "^3.0.1",
+    "react-ionicons": "2.0.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
