--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-facebook-login": "^4.1.1",
     "react-ionicons": "2.0.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -66,7 +67,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "set HTTPS=true&&node scripts/start.js",
     "build": "node scripts/build.js",
     "extract": "i18n_extract",
     "import": "i18n_import --encoding=utf-8"
