--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-ionicons": "2.0.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-i18n": "^1.5.14",
